--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,14 @@
 {
 	"manifest_version": 1,
-	"id": "joplin.plugin.alondmnt.time-slip",
+	"id": "joplin.plugin.carbondelta.time-slip",
 	"app_min_version": "2.13",
 	"platforms": ["desktop", "mobile"],
-	"version": "1.0.2",
-	"name": "Time Slip",
+	"version": "1.1.0",
+	"name": "Time Slip carbondelta",
 	"description": "A time tracker with logs stored and synced in Joplin notes.",
-	"author": "Alon Diament",
-	"homepage_url": "https://github.com/alondmnt/joplin-plugin-time-slip#readme",
-	"repository_url": "https://github.com/alondmnt/joplin-plugin-time-slip",
+	"author": "Carbondelta",
+	"homepage_url": "https://github.com/luca2103/joplin-plugin-time-slip#readme",
+	"repository_url": "https://github.com/luca2103/joplin-plugin-time-slip",
 	"keywords": ["time", "tracking"],
 	"categories": ["productivity"],
 	"screenshots": [],
